# micro-flyweight

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: micro_flyweightConfig.cmake.in
include/: micro_flyweight.h
include/micro_flyweight/: factory.h  flyweight.h
test/: CMakeLists.txt
test/micro_flyweight/: basic.cpp  examples.cpp  string_view.cpp
